<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Password Crypt</string>
    <string name="action_settings">Settings</string>

    <string-array name="timeoutStrings">
        <item>1 min</item>
        <item>2 mins</item>
        <item>5 mins</item>
        <item>10 mins</item>
        <item>never</item>
    </string-array>

    <string-array name="timeoutValues">
        <item>1</item>
        <item>2</item>
        <item>5</item>
        <item>10</item>
        <item>-1</item>
    </string-array>

    <string name="alert_okay">Okay</string>
    <string name="confirm_okay">Okay</string>
    <string name="confirm_cancel">Cancel</string>
    <string name="confirm_discard">Discard</string>
    <string name="input_okay">Okay</string>
    <string name="input_cancel">Cancel</string>
    <string name="alert_positive">Yes</string>
    <string name="alert_negative">No</string>

    <string name="new_entry_title">&lt;new entry&gt;</string>
    <string name="untitled_entry_title">&lt;untitled&gt;</string>

    <string name="detail_title_hint">Detail name</string>
    <string name="detail_location_hint">URL / Location</string>
    <string name="detail_item_key_hint">Key</string>
    <string name="detail_item_value_hint">Value</string>

    <string name="settings_cloud_title">Sync data to Google Drive</string>
    <string name="settings_timeout_title">Idle Timeout</string>
    <string name="settings_password_title">Change Password &#8230;</string>
    <string name="settings_import_title">Import old data &#8230;</string>
    <string name="settings_export_title">Backup data &#8230;</string>
    <string name="settings_delete_title">Delete all data &#8230;</string>
    <string name="settings_about_title">About Password Crypt &#8230;</string>

    <string name="nav_mismatched_remote_pw_message">Remote data does not have a matching password.  What would you like to do?</string>
    <string name="nav_mismatched_remote_pw_change_local">Change local password</string>
    <string name="nav_mismatched_remote_pw_overwrite">Overwrite remote data</string>
    <string name="nav_mismatched_remote_pw_disable">Disable remote sync</string>

    <string name="nav_trashed_remote_message">Remote data was trashed.  What would you like to do?</string>
    <string name="nav_trashed_remote_disable">Disable remote sync</string>
    <string name="nav_trashed_remote_untrash">Untrash remote data</string>

</resources>
