...
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
	>

		<TextView
		    android:id="@+id/detailitem_keylabel"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight=".5"
		    android:text="Label1" 
	        android:paddingLeft="12dp"
	        android:paddingTop="7dp"
	        android:paddingBottom="7dp"
	        android:textSize="18sp">
		</TextView>

		<TextView
		    android:id="@+id/detailitem_valuelabel"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight=".5"
		    android:text="label2" 
	        android:paddingLeft="12dp"
	        android:paddingTop="7dp"
...
